# AutoForge

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: README.md
scripts/: run-local-tests.sh
src/autoforge/: __init__.py  cli.py  graph.py  pipeline.py  types.py
src/autoforge/agents/: nodes.py
src/autoforge/api/: app.py
src/autoforge/nodes/: __init__.py  data_loader.py  fastapi_deploy.py  model_registry.py  preprocess_optuna.py  train_mlflow.py
tests/: test_api.py  test_data_loader.py  test_fastapi_deploy.py  test_graph.py  test_model_registry.py  test_pipeline.py  test_preprocess_optuna.py  test_train_mlflow.py
