[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoforge"
version = "0.1.0"
description = "LangGraph AutoML pipeline from CSV to deployable FastAPI service"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AutoForge"}]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.4",
  "optuna>=3.6",
  "mlflow>=2.12",
  "langgraph>=0.2.0",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "joblib>=1.3",
  "pydantic>=2.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

